# HiveBear

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.cuda  LICENSE  README.md  SECURITY.md  deny.toml  install.sh  uninstall.sh
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  model_request.yml
.github/workflows/: ci.yml  mobile.yml  release.yml
apps/desktop/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json  mobile.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: error.rs  lib.rs  main.rs  state.rs  validation.rs
apps/desktop/src-tauri/src/commands/: account.rs  benchmark.rs  chat.rs  config.rs  device.rs  inference.rs  mesh.rs  mod.rs  profile.rs  registry.rs  secrets.rs
apps/desktop/src/components/: BottomTabs.tsx  ChatInput.tsx  ChatMessage.tsx  ChatParamsPanel.tsx  CommandPalette.tsx  ConversationDrawer.tsx  DownloadProgress.tsx  ErrorBoundary.tsx  Layout.tsx  MarkdownContent.tsx  MeshStatusPill.tsx  MessageActions.tsx  ModelCard.tsx  ResourceGauge.tsx  Sidebar.tsx  StreamingIndicator.tsx  Toast.tsx  UpdateNotification.tsx  WelcomeModal.tsx
apps/desktop/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  EmptyState.tsx  Input.tsx  Surface.tsx  Toggle.tsx  index.ts
apps/desktop/src/hooks/: useAccount.ts  useBenchmark.ts  useConfig.ts  useConversations.ts  useDevice.ts  useInference.ts  useMeshPulse.ts  useProfile.ts  useRegistry.ts
apps/desktop/src/lib/: invoke.ts
apps/desktop/src/pages/: Account.tsx  Benchmark.tsx  Chat.tsx  Dashboard.tsx  MeshStatus.tsx  ModelBrowser.tsx  Settings.tsx
apps/desktop/src/styles/: index.css
crates/hivebear-cli/: Cargo.toml
crates/hivebear-cli/src/: account_commands.rs  main.rs  pipeline_handler.rs  registry_commands.rs
crates/hivebear-cli/src/api/: mod.rs  ollama.rs
crates/hivebear-core/: Cargo.toml
crates/hivebear-core/src/: contribution.rs  fingerprint.rs  lib.rs  secrets.rs  types.rs
crates/hivebear-core/src/benchmark/: extrapolator.rs  mod.rs  report.rs  runner.rs
crates/hivebear-core/src/config/: mod.rs  paths.rs
crates/hivebear-core/src/profiler/: cpu.rs  gpu.rs  memory.rs  mod.rs  platform.rs  storage.rs
crates/hivebear-core/src/recommender/: community.rs  mod.rs  model_db.rs  scoring.rs
crates/hivebear-inference/: Cargo.toml
crates/hivebear-inference/src/: benchmark.rs  chat_template.rs  error.rs  lib.rs  loader.rs  offload.rs  orchestrator.rs  selector.rs  structured_output.rs  tool_calling.rs  types.rs
crates/hivebear-inference/src/engine/: candle_backend.rs  candle_pipeline.rs  candle_wasm.rs  dummy.rs  llamacpp.rs  mlx.rs  mod.rs  onnx.rs
crates/hivebear-inference/src/engine/cloud/: mod.rs  protocol.rs  registry.rs  sse.rs
crates/hivebear-inference/src/engine/cloud/protocols/: anthropic.rs  cohere.rs  gemini.rs  mod.rs  openai_compat.rs
crates/hivebear-mesh/: Cargo.toml
crates/hivebear-mesh/src/: backend.rs  config.rs  error.rs  identity.rs  lib.rs  node.rs  peer.rs  protocol.rs
crates/hivebear-mesh/src/discovery/: composite.rs  mod.rs  pex.rs  server.rs
crates/hivebear-mesh/src/nat/: holepunch.rs  mod.rs  relay.rs  stun.rs
crates/hivebear-mesh/src/pipeline/: checkpoint.rs  daemon.rs  health.rs  initiator.rs  mod.rs  worker.rs
crates/hivebear-mesh/src/scheduler/: mod.rs  optimizer.rs  plan.rs  swarm_scheduler.rs
crates/hivebear-mesh/src/swarm/: formation.rs  mod.rs  rebalance.rs  router.rs  speculative.rs
crates/hivebear-mesh/src/transport/: compression.rs  mock.rs  mod.rs  protocol.rs  quic.rs  tensor_transfer.rs
crates/hivebear-mesh/src/trust/: mod.rs  reputation.rs  verification.rs
crates/hivebear-persistence/: Cargo.toml
crates/hivebear-persistence/src/: db.rs  error.rs  lib.rs  models.rs
crates/hivebear-registry/: Cargo.toml
crates/hivebear-registry/src/: conversion.rs  download.rs  error.rs  lib.rs  metadata.rs  ollama_names.rs  storage.rs
crates/hivebear-registry/src/registry/: huggingface.rs  local.rs  mod.rs  ollama_lib.rs
packaging/aur/: PKGBUILD
packaging/homebrew/: hivebear.rb
web/: Cargo.toml  build.sh
web/src/: lib.rs  model_fetch.rs  webgpu.rs
