[package]
name = "hivebear-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI interface for HiveBear"

[[bin]]
name = "hivebear"
path = "src/main.rs"

[features]
default = ["api", "cloud", "llamacpp"]
api = ["dep:axum"]
cloud = ["hivebear-inference/cloud"]
llamacpp = ["hivebear-inference/llamacpp"]
llamacpp-cuda = ["llamacpp", "hivebear-inference/llamacpp-cuda"]
llamacpp-metal = ["llamacpp", "hivebear-inference/llamacpp-metal"]
llamacpp-vulkan = ["llamacpp", "hivebear-inference/llamacpp-vulkan"]
headless = []

[dependencies]
hivebear-core = { path = "../hivebear-core" }
hivebear-inference = { path = "../hivebear-inference" }
hivebear-registry = { path = "../hivebear-registry" }
hivebear-mesh = { path = "../hivebear-mesh" }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
colored = "3"
indicatif = "0.17"
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "signal"] }
tokio-stream = "0.1"
async-trait = "0.1"
futures = "0.3"
axum = { version = "0.8", optional = true }
tower-http = { version = "0.6", features = ["cors"] }
tower = "0.5"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rpassword = "7"
hex = "0.4"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
self_update = { version = "0.42", features = ["archive-tar", "archive-zip", "compression-flate2", "compression-zip-deflate"] }
