[package]
name = "hivebear-inference"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Inference orchestrator for HiveBear: unified API over multiple LLM engines"

[dependencies]
# Workspace siblings
hivebear-core = { path = "../hivebear-core" }

# Async
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"

# UUID for tool call IDs
uuid = { version = "1", features = ["v4", "js"] }

# Text encoding (for llama.cpp token decoding)
encoding_rs = "0.8"

# Base64 (for image data in multimodal messages)
base64 = "0.22"

# Optional engines (feature-gated)
llama-cpp-2 = { version = "0.1", optional = true }
candle-core = { version = "0.8", optional = true }
candle-transformers = { version = "0.8", optional = true }
candle-nn = { version = "0.8", optional = true }
tokenizers = { version = "0.20", optional = true, default-features = false }
ort = { version = "=2.0.0-rc.11", optional = true, default-features = false, features = ["load-dynamic"] }
reqwest = { version = "0.12", features = ["json", "stream"], optional = true }
async-stream = { version = "0.3", optional = true }

# Native-only async runtime
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs"] }
tokio-stream = "0.1"

# WASM-only dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
getrandom = { version = "0.2", features = ["js"] }

[features]
default = ["candle", "llamacpp"]
llamacpp = ["dep:llama-cpp-2"]
llamacpp-cuda = ["llamacpp", "llama-cpp-2/cuda"]
llamacpp-metal = ["llamacpp", "llama-cpp-2/metal"]
llamacpp-vulkan = ["llamacpp", "llama-cpp-2/vulkan"]
candle = ["dep:candle-core", "dep:candle-transformers", "dep:candle-nn", "dep:tokenizers", "tokenizers/onig"]
onnx = ["dep:ort"]
cloud = ["dep:reqwest", "dep:async-stream"]
mlx = ["dep:async-stream"]
wasm = ["dep:candle-core", "dep:candle-transformers", "dep:candle-nn", "dep:tokenizers", "tokenizers/unstable_wasm", "hivebear-core/wasm"]
all-engines = ["llamacpp", "candle", "onnx"]

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
pretty_assertions = "1"
