[package]
name = "hivebear-persistence"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Conversation persistence for HiveBear"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
tracing = "0.1"
