[package]
name = "hivebear-registry"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Model discovery, download, conversion, and storage for HiveBear"

[dependencies]
hivebear-core = { path = "../hivebear-core" }

# Async
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs", "process"] }
futures = "0.3"

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# URL encoding
urlencoding = "2"

# Hashing for integrity verification
sha2 = "0.10"

# Progress reporting
indicatif = "0.17"

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"

# Time for metadata timestamps
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tempfile = "3"
pretty_assertions = "1"
