[package]
name = "hivebear-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
hivebear-core = { path = "../../../crates/hivebear-core" }
hivebear-inference = { path = "../../../crates/hivebear-inference" }
hivebear-persistence = { path = "../../../crates/hivebear-persistence" }
hivebear-registry = { path = "../../../crates/hivebear-registry" }
reqwest = { version = "0.12", features = ["json"] }
hex = "0.4"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-shell = "2"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = ["llamacpp"]
llamacpp = ["hivebear-inference/llamacpp"]
llamacpp-metal = ["llamacpp", "hivebear-inference/llamacpp-metal"]
llamacpp-cuda = ["llamacpp", "hivebear-inference/llamacpp-cuda"]
llamacpp-vulkan = ["llamacpp", "hivebear-inference/llamacpp-vulkan"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
