[package]
name = "hivebear-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "hivebear_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
hivebear-core = { path = "../../../crates/hivebear-core" }
hivebear-inference = { path = "../../../crates/hivebear-inference", default-features = false }
hivebear-mesh = { path = "../../../crates/hivebear-mesh" }
hivebear-persistence = { path = "../../../crates/hivebear-persistence" }
hivebear-registry = { path = "../../../crates/hivebear-registry" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
hex = "0.4"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = ["llamacpp", "candle"]
llamacpp = ["hivebear-inference/llamacpp"]
llamacpp-metal = ["llamacpp", "hivebear-inference/llamacpp-metal"]
llamacpp-cuda = ["llamacpp", "hivebear-inference/llamacpp-cuda"]
llamacpp-vulkan = ["llamacpp", "hivebear-inference/llamacpp-vulkan"]
candle = ["hivebear-inference/candle"]
# Mobile: no local inference engines initially (Candle has ARM FP16 build issues).
# Enables mesh participation, model browsing, and chat via remote inference.
mobile = []

[build-dependencies]
tauri-build = { version = "2", features = [] }
